--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     @inproceedings{yang2023visualforce
       author    = {Yang, Taozheng and Jing, Ya and Wu, Hongtao and Xu, Jiafeng and Sima, Kuankuan and Chen,
                   Guangzeng and Sima, Qie and Kong, Tao},
-      title     = {Visual-Force Imitation for Real-World Mobile Manipulation},
+      title     = {MOMA-Force: Visual-Force Imitation for Real-World Mobile Manipulation},
       booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
       year      = {2023}
     }
