--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="item open_washing_machine_mute">
           <video poster="" id="open_washing_machine_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_washing_machine_mute.mp4.mp4"
+            <source src="./static/videos/open_washing_machine_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
