ready to release

--- a/index.html
+++ b/index.html
@@ -131,37 +131,37 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item open_left_door_mute">
           <video poster="" id="open_left_door_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_left_door_mute.mp4"
+            <source src="static/videos/demo/open_left_door_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_cabinet_drawer_mute">
           <video poster="" id="open_cabinet_drawer_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_cabinet_drawer_mute.mp4"
+            <source src="static/videos/demo/open_cabinet_drawer_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_right_door_mute">
           <video poster="" id="open_right_door_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_right_door_mute.mp4"
+            <source src="static/videos/demo/open_right_door_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_top_drawer_mute">
           <video poster="" id="open_top_drawer_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_top_drawer_mute.mp4"
+            <source src="static/videos/demo/open_top_drawer_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_washing_machine_mute">
           <video poster="" id="open_washing_machine_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/open_washing_machine_mute.mp4"
+            <source src="static/videos/demo/open_washing_machine_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item rotate_tap_mute">
           <video poster="" id="rotate_tap_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/rotate_tap_mute.mp4"
+            <source src="static/videos/demo/rotate_tap_mute.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -268,6 +268,149 @@
 </section>
 
 
+<section class="section">
+
+  <!-- open_right_door -->
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+
+      <!-- Behavior Cloning -->
+      <div class="column">
+        <div class="content">
+          <p>Behavior Cloning (BC)</p>
+          <video id="BC" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_right_door_bc.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA -->
+      <div class="column">
+        <div class="content">
+          <p>MOMA</p>
+          <video id="MOMA" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_right_door_moma.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA-Force -->
+      <div class="column">
+        <div class="content">
+          <p>MOMA-Force</p>
+          <video id="MOMA-Force" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_right_door_moma_force.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <!-- open_right_door end -->
+
+  <!-- open_left_door -->
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+
+      <!-- Behavior Cloning -->
+      <div class="column">
+        <div class="content">
+          <video id="open_left_door_bc" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_left_door_bc.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA -->
+      <div class="column">
+        <div class="content">
+          <video id="open_left_door_moma" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_left_door_moma.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA-Force -->
+      <div class="column">
+        <div class="content">
+          <video id="open_left_door_moma_force" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/open_left_door_moma_force.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <!-- open_left_door end -->
+
+  <!-- rotate_tap -->
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+
+      <!-- Behavior Cloning -->
+      <div class="column">
+        <div class="content">
+          <video id="rotate_tap_bc" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/rotate_tap_bc.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA -->
+      <div class="column">
+        <div class="content">
+          <video id="rotate_tap_moma" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/rotate_tap_moma.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <!-- MOMA-Force -->
+      <div class="column">
+        <div class="content">
+          <video id="rotate_tap_moma_force" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/comp/rotate_tap_moma_force.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <!-- open_left_door end -->
+</section>
+
+<section class="section">
+  <!-- Concurrent Work. -->
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Related Links</h2>
+        <div class="content has-text-justified">
+          <p>
+            <a href="https://explore-pretrain-robot.github.io">Exploring Visual Pre-training for Robot Manipulation: Datasets, Models and Methods</a>, IROS 2023
+          </p>
+          <p>
+            <a href="https://arxiv.org/abs/2111.07832">iBOT: Image BERT Pre-Training with Online Tokenizer</a>, ICLR 2022
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--/ Concurrent Work. -->
+</section>
 
 
 
