--- a/index.html
+++ b/index.html
@@ -131,37 +131,37 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item open_left_door_mute">
           <video poster="" id="open_left_door_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/open_left_door_mute.mp4"
+            <source src="static/videos/demo/open_left_door_720.mov"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_cabinet_drawer_mute">
           <video poster="" id="open_cabinet_drawer_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/open_cabinet_drawer_mute.mp4"
+            <source src="static/videos/demo/open_cabinet_drawer_720.mov"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_right_door_mute">
           <video poster="" id="open_right_door_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/open_right_door_mute.mp4"
+            <source src="static/videos/demo/open_right_door_720.mov"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_top_drawer_mute">
           <video poster="" id="open_top_drawer_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/open_top_drawer_mute.mp4"
+            <source src="static/videos/demo/open_top_drawer_720.mov"
                     type="video/mp4">
           </video>
         </div>
         <div class="item open_washing_machine_mute">
           <video poster="" id="open_washing_machine_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/open_washing_machine_mute.mp4"
+            <source src="static/videos/demo/open_washing_machine_720.mov"
                     type="video/mp4">
           </video>
         </div>
         <div class="item rotate_tap_mute">
           <video poster="" id="rotate_tap_mute" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/demo/rotate_tap_mute.mp4"
+            <source src="static/videos/demo/rotate_tap_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -279,7 +279,7 @@
         <div class="content">
           <p>Behavior Cloning (BC)</p>
           <video id="BC" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_right_door_bc.mp4"
+            <source src="./static/videos/comp/open_right_door_bc_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -288,9 +288,9 @@
       <!-- MOMA -->
       <div class="column">
         <div class="content">
-          <p>MOMA</p>
+          <p>MOMA-Force w/o FC</p>
           <video id="MOMA" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_right_door_moma.mp4"
+            <source src="./static/videos/comp/open_right_door_moma_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -301,7 +301,7 @@
         <div class="content">
           <p>MOMA-Force</p>
           <video id="MOMA-Force" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_right_door_moma_force.mp4"
+            <source src="./static/videos/comp/open_right_door_moma_force_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -320,7 +320,7 @@
       <div class="column">
         <div class="content">
           <video id="open_left_door_bc" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_left_door_bc.mp4"
+            <source src="./static/videos/comp/open_left_door_bc_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -330,7 +330,7 @@
       <div class="column">
         <div class="content">
           <video id="open_left_door_moma" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_left_door_moma.mp4"
+            <source src="./static/videos/comp/open_left_door_moma_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -340,7 +340,7 @@
       <div class="column">
         <div class="content">
           <video id="open_left_door_moma_force" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/open_left_door_moma_force.mp4"
+            <source src="./static/videos/comp/open_left_door_moma_force_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -359,7 +359,7 @@
       <div class="column">
         <div class="content">
           <video id="rotate_tap_bc" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/rotate_tap_bc.mp4"
+            <source src="./static/videos/comp/rotate_tap_bc_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -369,7 +369,7 @@
       <div class="column">
         <div class="content">
           <video id="rotate_tap_moma" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/rotate_tap_moma.mp4"
+            <source src="./static/videos/comp/rotate_tap_moma_720.mov"
                     type="video/mp4">
           </video>
         </div>
@@ -379,7 +379,7 @@
       <div class="column">
         <div class="content">
           <video id="rotate_tap_moma_force" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/comp/rotate_tap_moma_force.mp4"
+            <source src="./static/videos/comp/rotate_tap_moma_force_720.mov"
                     type="video/mp4">
           </video>
         </div>
